flux/infrastructure/rabbitmq-source/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-sources
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
