flux/infrastructure/rabbitmq-source/webhook-deployment.yaml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-webhook
  namespace: knative-sources
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      app: rabbitmq-webhook
      role: rabbitmq-webhook
  template:
    metadata:
      labels: *labels
    spec:
      # To avoid node becoming SPOF, spread our replicas to different nodes.
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: rabbitmq-webhook
                topologyKey: kubernetes.io/hostname
              weight: 100
      serviceAccountName: rabbitmq-webhook
      enableServiceLinks: false
      containers:
        - name: rabbitmq-webhook
          terminationMessagePolicy: FallbackToLogsOnError
          # This is the Go import path for the binary that is containerized
          # and substituted here.
          image: localhost:5001/knative-rabbitmq-source-webhook:v1.17.6
          resources:
            # requests:
            #   # taken from serving.
            #   cpu: 20m
            #   memory: 20Mi
            limits:
              # taken from serving.
              # cpu: 200m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - all
          ports:
            - name: https-webhook
              containerPort: 8443
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
          readinessProbe: &probe
            periodSeconds: 1
            httpGet:
              scheme: HTTPS
              port: 8443
              httpHeaders:
                - name: k-kubelet-probe
                  value: "webhook"
      # Our webhook should gracefully terminate by lame ducking first, set this to a sufficiently
      # high value that we respect whatever value it has configured for the lame duck grace period.
      terminationGracePeriodSeconds: 300
      # Removed nodeSelector and toleration for single-node cluster (all pods should schedule anywhere)
