flux/infrastructure/rabbitmq-source/controller-deployment.yaml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-controller-manager
  namespace: knative-sources
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
    control-plane: rabbitmq-controller-manager
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      control-plane: rabbitmq-controller-manager
  template:
    metadata:
      labels: *labels
    spec:
      serviceAccountName: rabbitmq-controller-manager
      containers:
        - name: manager
          image: localhost:5001/knative-rabbitmq-source-controller:v1.17.6
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - all
          volumeMounts:
          resources: {}
            # requests:
            #   cpu: 100m
            #   memory: 100Mi
      serviceAccount: rabbitmq-controller-manager
      terminationGracePeriodSeconds: 10
      # Removed nodeSelector and toleration for single-node cluster (all pods should schedule anywhere)

---
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-controller
  namespace: knative-sources
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
    control-plane: rabbitmq-controller-manager
spec:
  selector:
    control-plane: rabbitmq-controller-manager
  ports:
    - name: https-rabbitmq
      port: 443
