flux/infrastructure/rabbitmq-source/webhook-service.yaml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
    role: rabbitmq-source-webhook
  name: rabbitmq-source-webhook
  namespace: knative-sources
spec:
  ports:
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    role: rabbitmq-source-webhook

---
apiVersion: v1
kind: Service
metadata:
  labels:
    rabbitmq.eventing.knative.dev/release: "v1.17.6"
    role: rabbitmq-webhook
  name: rabbitmq-webhook
  namespace: knative-sources
spec:
  ports:
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    role: rabbitmq-webhook
